--- a/package.json
+++ b/package.json
@@ -8,23 +8,24 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.1.1",
+    "@tanstack/react-query": "^5.90.17",
+    "axios": "^1.13.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.1",
-    "zustand": "^4.4.0",
-    "@tanstack/react-query": "^5.5.0",
     "react-hook-form": "^7.45.0",
+    "react-router-dom": "^6.14.1",
     "zod": "^3.23.0",
-    "@hookform/resolvers": "^3.1.1"
+    "zustand": "^4.4.0"
   },
   "devDependencies": {
-    "typescript": "^5.2.2",
-    "vite": "^5.2.0",
-    "@vitejs/plugin-react": "^4.0.0",
-    "tailwindcss": "^3.4.0",
-    "postcss": "^8.4.0",
-    "autoprefixer": "^10.4.0",
     "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0"
+    "@types/react-dom": "^18.2.0",
+    "@vitejs/plugin-react": "^4.0.0",
+    "autoprefixer": "^10.4.0",
+    "postcss": "^8.4.0",
+    "tailwindcss": "^3.4.0",
+    "typescript": "^5.2.2",
+    "vite": "^5.2.0"
   }
 }
