--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@hookform/resolvers": "^3.1.1",
     "@tanstack/react-query": "^5.90.17",
     "axios": "^1.13.2",
+    "date-fns": "^4.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.0",
@@ -19,6 +20,7 @@
     "zustand": "^4.4.0"
   },
   "devDependencies": {
+    "@types/node": "^25.0.9",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "@vitejs/plugin-react": "^4.0.0",
