--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.1.1",
+    "@stripe/react-stripe-js": "^5.6.0",
+    "@stripe/stripe-js": "^8.7.0",
     "@tanstack/react-query": "^5.90.17",
     "axios": "^1.13.2",
     "date-fns": "^4.1.0",
